# TreeShap

./: .gitignore  MANIFEST.in  README.md  config.json  create_example.py  main.py  main_2.py  pyproject.toml  results.py  tree_input.py
analysis/: __init__.py
analysis/tabular/: __init__.py
analysis/tabular/tree_based/: __init__.py  base.py  rf_explainer.py  tree_input.py
analysis/timeseries/: __init__.py  arima_stats.py  base.py  lstm_pytorch.py
docs/: configuration.md  theory.md
docs/tutorials/timeseries/: lstm.md
examples/: create_example.py
examples/tabular/binary_classify/: binary_classify.py  config.json  rf_classify.py
examples/tabular/classify/: rf_classify.py
examples/tabular/multioutput_classify/: config.json  multioutput_classify.py
examples/tabular/multioutput_regress/: config.json  multioutput_regress.py
examples/tabular/regress/: config.json  rf_regress.py
examples/timeseries/lstm/: background_data.pt  config.json  full_lstm_model.pth  lstm.py  test_data_to_explain.pt
output/: explanation_lstm_gradient_20260220_143820.ipynb  generate_notebook.py  multi_report_random_forest_20260220_143844.ipynb  multi_report_random_forest_20260220_143908.ipynb  report_lstm_20260223_154441.ipynb  report_random_forest_20260223_160452.ipynb  report_random_forest_20260223_160626.ipynb  results.py  shap_audit_random_forest_20260220_143844.xlsx  shap_audit_random_forest_20260220_143908.xlsx  shap_audit_random_forest_20260223_160451.xlsx  shap_audit_random_forest_20260223_160625.xlsx
output/utils/: generate_notebook.py  report_gen.py  results.py
source/data/: binary_classify_dataset.csv  lstm_background_data.pt  lstm_data_to_explain.pt  multioutput_classify_dataset.csv  multioutput_regress_dataset.csv  rf_regress_dataset.csv
source/models/: binary_classify_model.pkl  lstm_model.pth  rf_classify.pkl
